# convey

./: .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  Dockerfile.test  README.md  challenges.md  design.dio  environment.yml  example.py  main.py  plan.md  pov.ipynb  requirements.txt  streamlit.py  terminal_app.py
.github/workflows/: ci-cd.yml
configs/: config.py  metadata.py  paths.py
controllers/: path_utils.py
controllers/ml/interface/: model.py
controllers/ml/pytorch/: merge.py  model.py
controllers/networking/: client.py  messages.py  messages_fallback.py  p2p.py  perf_logger.py  pool.py  req_rep.py  serializer.py  threads.py  transmitter.py  ws_client.py
controllers/networking/test/: test_fallback.py  test_p2p.py
controllers/verifier/: chain.py  update_verifier.py
ml/interface/: merge.py  model.py
ml/interface/test/: test_merge.py
ml/pytorch/: merge.py  model.py
ml/tensorflow/: merge.py
models/: clients.py  fallback.py  server.py
networking/connection/: p2p.py
server/: .gitignore  Cargo.toml  Dockerfile  docker-compose-dev.yml  docker-compose.yml  start.sh
server/src/: lib.rs  main.rs
server/src/configs/: config.rs  pool.rs
server/src/controller/: handler.rs  mod.rs  secret_manager.rs
server/src/controller/tests/: mod.rs  test_secret_manager.rs
server/src/models/: models.rs
views/: streamlit.py
