[package]
name = "convey-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ["ws"] }
bincode = "2"
chrono = "0.4.43"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = {version = "1.49.0", features = ["full"] }
uuid = {version = "1.20.0", features = ["v4"]}
